single shapefile parsing pipe